--- a/easy_pdf/templates/easy_pdf/base.html
+++ b/easy_pdf/templates/easy_pdf/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{{ title|default:"" }}</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
 
     {% block style_base %}
         {% comment %}
